[tool.poetry]
name = "se-oppts-automation-pdf"
version = "0.1.0"
description = ""
authors = ["Island Chen <island.chen@outlook.com>"]
readme = "README.md"
packages = [{include = "se_oppts_automation_pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
atlassian-python-api = "^3.37.0"
beautifulsoup4 = "^4.12.2"
msal = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
