[tool.poetry]
name = "se-oppts-automation-pdf"
version = "0.1.0"
description = ""
authors = ["Island Chen <island.chen@outlook.com>"]
readme = "README.md"
packages = [{ include = "se_oppts_automation_pdf" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
beautifulsoup4 = "^4.12.2"
msal = "^1.22.0"
atlassian-python-api = "3.36.0"
boto3 = "^1.28.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
